--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-petname": "^1.0.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
