--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "idle-vue": "^2.0.5",
+    "moment": "^2.22.2",
     "node-petname": "^1.0.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
